# maybe-borrow.rs

./: Cargo.toml  README.md
src/: compile_fail.rs  custom_try.rs  lib.rs  maybe_borrow_impl.rs  ptr_impls.rs  traits.rs  utils.rs  with_lt.rs
src/macros/: maybe_borrow.md  mod.rs  try_maybe_borrow.md
tests/: lending_iterator.rs  lending_stream.rs  maps.rs
